[tool.poetry]
name = "template-poetry"
version = "0.1.0"
description = "This project serves as a template for initialising new Python projects with Poetry, including basic configuration for dependency management and virtual environment setup. It is designed to be cloned for quick setup of new repositories on GitHub."
authors = ["ediakatos <ediakatos@mapaction.org>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

psutil = "^7.0.0"
rasterio = "^1.4.3"
geopandas = "^1.0.1"
xarray = "^2025.3.1"
pandas = "^2.2.3"
rioxarray = "^0.18.2"
rasterstats = "^0.20.0"
streamlit = "^1.45.0"
plotly = "^6.0.1"
fsspec = "^2025.3.2"
python-dotenv = "^1.1.0"
boto3 = "^1.38.7"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pymarkdownlnt = "^0.9.18"
isort = "^5.13.2"
pytest = "^8.2.2"
tabulate = "^0.9.0"
nbqa = "^1.8.5"
black = "^24.4.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"